config/namespaces/display-version/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-app-version
  name: go-app-version
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-app-version
  type: ClusterIP
