config/namespaces/display-version/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-app-version
  namespace: display-version
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: go-app-version.gcp.alekssaul.com
    http:
      paths:
      - path: /
        backend:
          serviceName: go-app-version
          servicePort: 80
  - host: go-app-version.aws.alekssaul.com
    http:
      paths:
      - path: /
        backend:
          serviceName: go-app-version
          servicePort: 80
